--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,6 +15,7 @@
 @import 'components/button';
 @import 'components/contextmenu';
 
+@import 'components/profilePage';
 @import 'components/login';
 
 .content-box {
@@ -23,6 +24,12 @@
     background-color: rgb(241, 241, 241);
     max-width: 700px;
     border-radius: 4px;
+    box-sizing: border-box;
+    @media screen and (min-width: 600px) {
+        &.big-padding {
+            padding: 24px;
+        }
+    }
 }
 
 .body-content > .content-box {
