--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,5 +1,10 @@
 $primary-color: #3480e4;
-$secondary-color: #194e95;
+$secondary-color: #3372c6;
+$tertiary-color: #2a5fa7;
+
+$danger-color: #d75d5d;
+$warn-color: #d9c723;
+
 $header-height: 60px;
 $sidebar-width: 280px;
 
@@ -9,6 +14,8 @@ $body-color: #111;
 $body-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
 $pagination-button-size: 40px;
+
+$sp-size: 449px;
 
 // Colors
 $blue: #3490dc;
@@ -21,3 +28,9 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+$google-color: #4285f4;
+$discord-color: #7289da;
+$twitter-color: #1da1f2;
+$twitch-color: #6441a5;
+$youtube-color: #dc443e;
