--- a/resources/sass/components/_contextmenu.scss
+++ b/resources/sass/components/_contextmenu.scss
@@ -33,6 +33,7 @@
         display: block;
         white-space: nowrap;
         font-size: 14px;
+        height: 32px;
         line-height: 32px;
         text-decoration: none;
         outline: none;
