--- a/resources/sass/components/_button.scss
+++ b/resources/sass/components/_button.scss
@@ -1,36 +1,75 @@
-//.btn {
-//    background-color: rgba(0, 0, 0, .04);
-//    color: black;
-//    padding: 8px 10px;
-//    border-radius: 4px;
-//    user-select: none;
-//    cursor: pointer;
-//    transition: background-color .12s, box-shadow .12s;
-//    &:hover {
-//        background-color: rgba(0, 0, 0, .06);
-//        box-shadow: 0 0 0 3px rgba(0, 0, 0, .12);
-//    }
-//    &:focus {
-//        background-color: rgba(0, 0, 0, .1);
-//        box-shadow: 0 0 0 2px rgba(0, 0, 0, .2);
-//    }
-//}
-
+.btn-container {
+    display: block;
+    font-size: 0;
+}
 .btn {
-    margin-top: 4px;
+    display: inline-block;
+    margin-top: 6px;
     margin-left: 6px;
     padding: 8px 16px;
-    background-color: $primary-color;
-    color: whitesmoke;
+    background-color: #d5d5d5;
+    color: #333;
+    font-size: 16px;
+    text-decoration: none;
     border-radius: 3px;
     cursor: pointer;
-    transition: background-color 0.12s, box-shadow 0.12s;
+    transition: background-color .12s, box-shadow .12s;
     &:hover {
-        background-color: darken($primary-color, 4);
+        background-color: darken(#d5d5d5, 4);
     }
     &:focus {
-        background-color: darken($primary-color, 12);
-        box-shadow: 0 0 0 3px rgba(69, 140, 233, 0.2);
+        background-color: darken(#d5d5d5, 12);
+        box-shadow: 0 0 0 3px rgba(#d5d5d5, .2);
+        outline: none;
+    }
+    &.full {
+        display: block;
+    }
+    &.btn-primary {
+        background-color: $primary-color;
+        color: whitesmoke;
+        &:hover {
+            background-color: darken($primary-color, 4);
+        }
+        &:focus {
+            background-color: darken($primary-color, 12);
+            box-shadow: 0 0 0 3px rgba($primary-color, .2);
+            outline: none;
+        }
+    }
+    &.btn-danger {
+        background-color: $danger-color;
+        color: whitesmoke;
+        &:hover {
+            background-color: darken($danger-color, 4);
+        }
+        &:focus {
+            background-color: darken($danger-color, 12);
+            box-shadow: 0 0 0 3px rgba($danger-color, .2);
+        }
+    }
+    &.btn-warn {
+        background-color: $warn-color;
+        color: #333;
+        &:hover {
+            background-color: darken($warn-color, 4);
+        }
+        &:focus {
+            background-color: darken($warn-color, 12);
+            box-shadow: 0 0 0 3px rgba($warn-color, .2);
+        }
+    }
+    &.btn-black,
+    &.btn-dark {
+        background-color: #3b3b3b;
+        color: whitesmoke;
+        &:hover {
+            background-color: darken(#3b3b3b, 4);
+        }
+        &:focus {
+            background-color: darken(#3b3b3b, 12);
+            box-shadow: 0 0 0 3px rgba(#3b3b3b, .2);
+        }
     }
     &.btn-text {
         background-color: transparent;
@@ -41,6 +80,39 @@
         &:focus {
             background-color: rgba($primary-color, .2);
             box-shadow: none;
+        }
+    }
+    &.google {
+        background-color: $google-color;
+        color: whitesmoke;
+        &:hover {
+            background-color: darken($google-color, 4);
+        }
+        &:focus {
+            background-color: darken($google-color, 12);
+            box-shadow: 0 0 0 3px rgba($google-color, .2);
+            outline: none;
+        }
+    }
+    &.discord {
+        background-color: $discord-color;
+        color: whitesmoke;
+        &:hover {
+            background-color: darken($discord-color, 4);
+        }
+        &:focus {
+            background-color: darken($discord-color, 12);
+            box-shadow: 0 0 0 3px rgba($discord-color, .2);
+            outline: none;
+        }
+    }
+    &.login-btn {
+        margin: 12px 0;
+        line-height: 33px;
+        .mdi {
+            margin-right: 8px;
+            font-size: 24px;
+            float: left;
         }
     }
 }
