--- a/resources/sass/components/_classes.scss
+++ b/resources/sass/components/_classes.scss
@@ -1,16 +1,22 @@
-.center-text {
+.text-left {
+    text-align: left;
+}
+.text-center {
     text-align: center;
 }
+.text-right {
+     text-align: right;
+ }
 
-.alert {
-    padding: 10px 12px;
-    border-radius: 4px;
-    border: solid 1px;
-    margin-top: 6px;
-    margin-bottom: 6px;
-    &.alert-danger {
-        background-color: rgba(232, 76, 76, 0.03);
-        color: #e27171;
-        border-color: rgba(232, 76, 76, 0.06);
-    }
-}
+//.alert {
+//    padding: 10px 12px;
+//    border-radius: 4px;
+//    border: solid 1px;
+//    margin-top: 6px;
+//    margin-bottom: 6px;
+//    &.alert-danger {
+//        background-color: rgba(232, 76, 76, 0.03);
+//        color: #e27171;
+//        border-color: rgba(232, 76, 76, 0.06);
+//    }
+//}
