--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -4,6 +4,7 @@ $tertiary-color: #2a5fa7;
 
 $danger-color: #d75d5d;
 $warn-color: #d9c723;
+$success-color: #61bb4b;
 
 $header-height: 60px;
 $sidebar-width: 280px;
