--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,7 +14,9 @@
 @import 'components/error-box';
 @import 'components/button';
 @import 'components/input';
+@import 'components/alert';
 @import 'components/contextmenu';
+@import 'components/pagination';
 
 @import 'components/profilePage';
 @import 'components/login';
