--- a/resources/sass/components/_classes.scss
+++ b/resources/sass/components/_classes.scss
@@ -8,6 +8,13 @@
      text-align: right;
  }
 
+.text-white {
+    color: white;
+}
+.text-whitesmoke {
+    color: whitesmoke;
+}
+
 //.alert {
 //    padding: 10px 12px;
 //    border-radius: 4px;
