--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -2,9 +2,9 @@ $primary-color: #3480e4;
 $secondary-color: #3372c6;
 $tertiary-color: #2a5fa7;
 
-$danger-color: #d75d5d;
-$warn-color: #d9c723;
 $success-color: #61bb4b;
+$danger-color: #d75d5d;
+$warning-color: #decc34;
 
 $header-height: 60px;
 $sidebar-width: 280px;
@@ -29,6 +29,7 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+$dark: #3b3b3b;
 
 $google-color: #4285f4;
 $discord-color: #7289da;
