--- a/resources/sass/_base.scss
+++ b/resources/sass/_base.scss
@@ -29,7 +29,7 @@ ol {
 
 // Base Design
 html {
-    overflow: hidden scroll;
+    overflow: auto scroll;
     scroll-behavior: smooth;
     @media screen and (max-width: 299px) {
         width: 299px;
@@ -75,6 +75,7 @@ h4 {
 a {
     &:focus {
         outline: dotted 1px gray;
+        outline-offset: .5px;
     }
 }
 
